new file:   assets/security/pic25.png - пример ER-диаграммы для 9.3.4 	modified:   part/security.tex - добавление примера в 9.3.4

--- a/part/security.tex
+++ b/part/security.tex
@@ -440,59 +440,101 @@ Access List для пользователей, имеющих доступ к т
 Цель этапа концептуального проектирования – создание концептуальной модели данных исходя из представлений
 пользователей о предметной области. Для ее достижения выполняется ряд последовательных процедур.
 \begin{enumerate}
-    \item \textbf{Определение сущностей и их документирование.}
-        Для идентификации сущностей определяются объекты, которые существуют независимо от других. Такие объекты
-        являются сущностями. Каждой сущности присваивается осмысленное имя, понятное пользователям. Имена и
-        описания сущностей заносятся в словарь данных. Если возможно, то устанавливается ожидаемое количество
-        экземпляров каждой сущности.
-
-    \item \textbf{Определение связей между сущностями и их документирование.}
-        Определяются только те связи между сущностями, которые необходимы для удовлетворения требований к проекту
-        базы данных. Устанавливается тип каждой из них. Выявляется класс принадлежности сущностей. Связям
-        присваиваются осмысленные имена, выраженные глаголами. Развернутое описание каждой связи с указанием ее
-        типа и класса принадлежности сущностей, участвующих в связи, заносится в словарь данных.
-
-    \item \textbf{Создание ER-модели предметной области.}
-        Для представления сущностей и связей между ними используются ER-диаграммы. На их основе создается единый
-        наглядный образ моделируемой предметной области – ER-модель предметной области.
-
-    \item \textbf{Определение атрибутов и их документирование.}
-        Выявляются все атрибуты, описывающие сущности созданной ER-модели. Каждому атрибуту присваивается осмысленное
-        имя, понятное пользователям. О каждом атрибуте в словарь данных помещаются следующие сведения:
-        \begin{itemize}
-            \item имя атрибута и его описание;
-
-            \item тип и размерность значений;
-
-            \item значение, принимаемое для атрибута по умолчанию (если такое имеется);
-
-            \item может ли атрибут иметь NULL-значения;
-
-            \item является ли атрибут составным, и если это так, то из каких простых атрибутов он состоит.
-                Например, атрибут "Ф.И.О. клиента" может состоять из простых атрибутов "Фамилия", "Имя",
-                "Отчество", а может быть простым, содержащим единые значения, как-то "Сидорский Евгений
-                Михайлович". Если пользователь не нуждается в доступе к отдельным элементам "Ф.И.О.",
-                то атрибут представляется как простой;
-
-            \item является ли атрибут расчетным, и если это так, то как вычисляются его значения.
-        \end{itemize}
-
-    \item \textbf{Определение значений атрибутов и их документирование.}
-        Для каждого атрибута сущности, участвующей в ER-модели, определяется набор допустимых значений и ему
-        присваивается имя. Например, атрибут "Тип счета" может иметь только значения "депозитный", "текущий",
-        "до востребования", "карт-счет". Обновляются записи словаря данных, относящиеся к атрибутам, – в них
-        заносятся имена наборов значений атрибутов.
-
-    \item \textbf{Определение первичных ключей для сущностей и их документирование.}
-        На этом шаге руководствуются определением первичного ключа – как атрибута или набора атрибутов сущности,
-        позволяющего уникальным образом идентифицировать ее экземпляры. Сведения о первичных ключах помещаются
-        в словарь данных.
-
-    \item \textbf{Обсуждение концептуальной модели данных с конечными пользователями.}
-        Концептуальная модель данных представляется ER-моделью с сопроводительной документацией, содержащей
-        описание разработанной модели данных. Если будут обнаружены несоответствия предметной области, то в
-        модель вносятся изменения  до тех пор, пока пользователи не подтвердят, что предложенная им модель
-        адекватно отображает их личные представления.
+	\item \textbf{Определение сущностей и их документирование.}
+	Для идентификации сущностей определяются объекты, которые существуют независимо от других. Такие объекты
+	являются сущностями. Каждой сущности присваивается осмысленное имя, понятное пользователям. Имена и
+	описания сущностей заносятся в словарь данных. Если возможно, то устанавливается ожидаемое количество
+	экземпляров каждой сущности.
+	
+	Предположим, что проектируется база данных, предназначенная для хранения информации о деятельности некоторого банка. Этот банк
+	имеет филиалы. Филиалы управляются менеджерами. Клиенты имеют в филиалах счета разных типов – текущие, срочные, до востребования, депозитные, карточные.
+	Филиалы обрабатывают эти счета. Описываемую предметную область назовем БАНК, в ней могут быть выделены 4 сущности: ФИЛИАЛ, МЕНЕДЖЕР, СЧЕТ, КЛИЕНТ.
+	\begin{itemize}
+		
+		\item ФИЛИАЛ: номер филиала, адрес филиала;
+		
+		\item МЕНЕДЖЕР: номер менеджера, стаж работы по специальности;
+		
+		\item СЧЕТ: номер счета, тип счета, дата открытия счета, капитализация (Да/Нет), остаток на счете;
+		
+		\item КЛИЕНТ: номер клиента, ФИО клиента, адрес клиента, подпись клиента.
+		
+	\end{itemize}
+	
+	\item \textbf{Определение связей между сущностями и их документирование.}
+	Определяются только те связи между сущностями, которые необходимы для удовлетворения требований к проекту
+	базы данных. Устанавливается тип каждой из них. Выявляется класс принадлежности сущностей. Связям
+	присваиваются осмысленные имена, выраженные глаголами. Развернутое описание каждой связи с указанием ее
+	типа и класса принадлежности сущностей, участвующих в связи, заносится в словарь данных.
+	
+	В рассматриваемой предметной области БАНК можно выделить 3 связи:
+	\begin{itemize}
+		
+		\item МЕНЕДЖЕР управляет ФИЛИАЛом
+		
+		\item ФИЛИАЛ обрабатывает СЧЕТ
+		
+		\item КЛИЕНТ имеет СЧЕТ
+		
+	\end{itemize}
+	
+	\item \textbf{Создание ER-модели предметной области.}
+	Для представления сущностей и связей между ними используются ER-диаграммы. На их основе создается единый
+	наглядный образ моделируемой предметной области – ER-модель предметной области.
+	
+	На диаграмме сущность изображается прямоугольником, в
+	котором указывается ее имя. А связь ромбом. Так же важен тип связи(1:1, 1:M, M:N). Рассмотрим их подробнее:
+	\begin{itemize}
+		\item 1:1(один к одному): примером такой связи служит "МЕНЕДЖЕР управляет ФИЛИАЛом", так как МЕНЕДЖЕР управляет только одним ФИЛИАЛом, а ФИЛИАЛ имеет только одного МЕНЕДЖЕРа;
+		
+		\item 1:M(один ко многим): примером такой связи служит "ФИЛИАЛ  обрабатывает СЧЕТ", так как СЧЕТ обрабатывается только одним ФИЛИАЛом, а ФИЛИАЛ может обрабатывать более одного СЧЕТа;
+		
+		\item  M:N(многие ко многим): примером такой связи служит "КЛИЕНТ ИМЕЕТ СЧЕТ", так как СЧЕТ может быть совместным и им могут пользоваться сразу несколько КЛИЕНТов, а КЛИЕНТ может завести более одного СЧЕТа;
+	\end{itemize}
+	\begin{figure}[H]
+		\centering
+		\includegraphics[width=0.8\textwidth]{assets/security/pic25.png}
+		\caption{ER-модель предметной области БАНК}
+		\label{fig:mesh28}
+	\end{figure}
+	
+	\item \textbf{Определение атрибутов и их документирование.}
+	Выявляются все атрибуты, описывающие сущности созданной ER-модели. Каждому атрибуту присваивается осмысленное
+	имя, понятное пользователям. О каждом атрибуте в словарь данных помещаются следующие сведения:
+	\begin{itemize}
+		\item имя атрибута и его описание;
+		
+		\item тип и размерность значений;
+		
+		\item значение, принимаемое для атрибута по умолчанию (если такое имеется);
+		
+		\item может ли атрибут иметь NULL-значения;
+		
+		\item является ли атрибут составным, и если это так, то из каких простых атрибутов он состоит.
+		Например, атрибут "Ф.И.О. клиента" может состоять из простых атрибутов "Фамилия", "Имя",
+		"Отчество", а может быть простым, содержащим единые значения, как-то "Сидорский Евгений
+		Михайлович". Если пользователь не нуждается в доступе к отдельным элементам "Ф.И.О.",
+		то атрибут представляется как простой;
+		
+		\item является ли атрибут расчетным, и если это так, то как вычисляются его значения.
+	\end{itemize}
+	
+	\item \textbf{Определение значений атрибутов и их документирование.}
+	Для каждого атрибута сущности, участвующей в ER-модели, определяется набор допустимых значений и ему
+	присваивается имя. Например, атрибут "Тип счета" может иметь только значения "депозитный", "текущий",
+	"до востребования", "карт-счет". Обновляются записи словаря данных, относящиеся к атрибутам, – в них
+	заносятся имена наборов значений атрибутов.
+	
+	\item \textbf{Определение первичных ключей для сущностей и их документирование.}
+	На этом шаге руководствуются определением первичного ключа – как атрибута или набора атрибутов сущности,
+	позволяющего уникальным образом идентифицировать ее экземпляры. Сведения о первичных ключах помещаются
+	в словарь данных.
+	
+	\item \textbf{Обсуждение концептуальной модели данных с конечными пользователями.}
+	Концептуальная модель данных представляется ER-моделью с сопроводительной документацией, содержащей
+	описание разработанной модели данных. Если будут обнаружены несоответствия предметной области, то в
+	модель вносятся изменения  до тех пор, пока пользователи не подтвердят, что предложенная им модель
+	адекватно отображает их личные представления.
 \end{enumerate}
 
 \subsubsection{Логическое  проектирование}
