modified:   part/security.tex - добавление информации про проектирование транзакций в 9.3.6

--- a/part/security.tex
+++ b/part/security.tex
@@ -932,15 +932,79 @@ Access List для пользователей, имеющих доступ к т
         документации.
 
     \item \textbf{Проектирование физической организации базы данных.}
-        На этом шаге выбирается наилучшая файловая организация для таблиц. Выявляются транзакции, которые
-        будут выполняться в проектируемой базе данных, и выделяются наиболее важные из них. Анализируется
-        пропускная способность транзакций – количество транзакций, которые могут быть обработаны за заданный
-        интервал времени, и время ответа – промежуток времени, необходимый для выполнения одной транзакции.
-        Стремятся к повышению пропускной способности транзакций и уменьшению времени ответа. На основании указанных
-        показателей принимаются решения об оптимизации производительности базы данных путем определения индексов
+        На этом шаге выбирается наилучшая файловая организация для таблиц. 
+        
+        Выполняется \textbf{проектирование транзакций}:
+        
+        Цель проектирования транзакций заключается в определении и
+        документировании высокоуровневых характеристик всех транзакций,
+        которые должны будут выполняться в разрабатываемой базе данных. Эту
+        работу следует выполнить еще на начальной стадии проектирования, что
+        позволит обеспечить поддержку всех требуемых транзакций со стороны
+        логической модели данных. При этом очень важно, чтобы характеристики
+        всех транзакций были зафиксированы в документации. Существует
+        несколько методов описания высокоуровневых характеристик транзакций.
+        Наиболее важные из них следующие:
+        
+        \begin{itemize}
+        	\item данные, которые используются транзакцией;
+        
+        	\item функциональные характеристики транзакции;
+        
+        	\item выходные данные, формируемые транзакцией;
+        
+        	\item степень важности транзакции для пользователей;
+        
+        	\item предполагаемая интенсивность использования. 
+        \end{itemize}
+        	
+        Для того чтобы разрабатываемый физический проект базы данных
+        обладал требуемым уровнем эффективности, необходимо получить
+        максимум сведений о тех транзакциях, которые будут выполняться в
+        проектируемой базе данных. Для этого потребуются как качественные, так и
+        количественные характеристики. Для каждой транзакции необходимо знать
+        следующее:
+        
+        \begin{itemize}
+        	\item транзакции, выполняемые наиболее часто и оказывающие
+        	существенное влияние на производительность;
+        
+        	\item транзакции, наиболее важные для работы организации;
+        
+        	\item периоды времени на протяжении суток/недель, в которые нагрузка
+       		базы данных возрастает до максимума (называемые периодами пиковой
+        	нагрузки);
+        
+        	\item ожидаемая частота выполнения транзакций;
+        
+        	\item отношения и атрибуты, к которым потребуется иметь доступ при
+       		выполнении транзакции, а также тип этого доступа;
+        
+        	\item ограничения, устанавливаемые на время выполнения транзакций.
+        \end{itemize} 
+        
+        СУБД, созданная для поддержки оперативной обработки транзакций,
+        называется OLTP-системой (Online Transaction Processing). Обычно OLTPсистемы проектируются с целью обеспечения максимально интенсивной
+        обработки транзакций.
+        
+        На основании указанных показателей принимаются решения об оптимизации производительности базы данных путем определения индексов
         в таблицах, ускоряющих выборку данных из базы, или снижения требований к уровню нормализации таблиц.
         Проводится оценка дискового объема памяти, необходимого для размещения создаваемой базы данных.
         Стремятся к его минимизации. Принятые решения по изложенным вопросам документируются.
+        
+		При этом стоит понимать, что индексы занимают место в БД. При вводе новых данных или удалении
+		данных СУБД приходится обновлять и таблицы, и индексы. Это может
+		замедлить выполнение операций модификации данных, особенно для таблиц
+		с большим числом строк, как в ХД. Таким образом, может появиться
+		проблема, суть которой состоит в возникновении конфликта между
+		скоростью обновления данных в таблице и скоростью ее считываний. При
+		разрешении этой проблемы следует придерживаться следующего
+		эмпирического правила: создавать индексы для колонок первичных ключей и
+		других колонок, часто используемых в тех запросах, в которых для выборки
+		данных применяются логические критерии. Если в результате скорость
+		обновления данных ухудшается, то можно рассмотреть вопрос об удалении
+		некоторых индексов.
+        
 
     \item \textbf{Разработка стратегии защиты базы данных.}
         База данных представляет собой ценный корпоративный ресурс, и организации ее защиты уделяется большое
