modified:   bibliography.bib - добавление источников в 9.3.3 и 9.1 	modified:   part/security.tex - добавление источников в 9.3.3 и 9.1

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1043,4 +1043,21 @@
 	title = {{An introduction to multilevel secure relational database management systems}},
 	url = {https://www.researchgate.net/publication/221500703_An_introduction_to_multilevel_secure_relational_database_management_systems}
 }
-	
+
+@inproceedings{shveikin,
+	title={Политика безопасности в базах данных},
+	author={Швейкин, Владислав Витальевич},
+	booktitle={Научные исследования и разработки студентов},
+	pages={207--209},
+	year={2017}
+}
+
+@article{nurzhanov,
+	title={Анализ политики безопасности в вычислительных сетях},
+	author={Нуржауов, Рустем Нуржауович},
+	journal={International scientific review},
+	number={LXX},
+	pages={12--14},
+	year={2020},
+	publisher={ООО {\guillemotleft}Олимп{\guillemotright}}
+}
