--- a/part/security.tex
+++ b/part/security.tex
@@ -11,13 +11,13 @@
 обеспечению безопасности информации, связанной с деятельностью организации. Только человек, четко
 осознающий цели организации и условия ее функционирования, может определить, какую информацию
 необходимо защищать и насколько существенными могут стать потери от несанкционированного
-распространения, искажения или разрушения информации. После того как политика безопасности
+распространения, искажения или разрушения информации \autocite{shveikin}. После того как политика безопасности
 определена, должен решаться вопрос о технологии ее реализации в автоматизированном контуре.
 Для реализации сформулированных в терминах естественного языка правил и норм политики
 безопасности необходимо использовать (или разработать) некоторую формальную модель,
 которая допускает эффективное программирование на каком-либо формальном языке.
 Наибольшее распространение в настоящее время получили две базовые модели безопасности
-данных: дискреционная и мандатная.
+данных: дискреционная и мандатная \autocite{shveikin}.
 
 \subsection{Методология проектирования}
 
@@ -339,14 +339,14 @@ Access List для пользователей, имеющих доступ к т
 Для реализации сформулированных в терминах естественного языка правил и норм политики безопасности необходимо
 использовать (или разработать) некоторую формальную модель, которая допускает эффективное программирование на
 каком-либо формальном языке. Наибольшее распространение в настоящее время получили две базовые модели безопасности
-данных: дискреционная и мандатная.
+данных: дискреционная и мандатная \autocite{shveikin}.
 
 Цель формализации политики безопасности для информационной системы — ясное изложение взглядов руководства
 организации на существо угроз информационной безопасности организации и технологий обеспечения безопасности ее
 информационных ресурсов. Политика безопасности обычно состоит из двух частей: общих принципов и конкретных правил
 работы с информационными ресурсами, то есть требований, и, в частности, с базами данных для различных категорий
 пользователей. Политика безопасности – это всегда некоторый компромисс между желаемым уровнем защищенности ресурсов
-информационной системы, удобством работы с системой и затратами средств, выделяемых на ее эксплуатацию.
+информационной системы, удобством работы с системой и затратами средств, выделяемых на ее эксплуатацию \autocite{shveikin}.
 
 Политика безопасности должна быть оформлена документально на нескольких уровнях управления. На уровне управляющего
 высшего звена руководства должен быть подготовлен и утвержден документ, в котором определены цели политики
@@ -354,11 +354,11 @@ Access List для пользователей, имеющих доступ к т
 должен быть детализирован администраторами безопасности информационных систем (управляющими среднего звена)
 с учетом принципов деятельности организации, соотношения важности целей, и наличия ресурсов. Детальные решения
 должны включать ясные определения методов защиты технических и информационных ресурсов, а также инструкции,
-определяющие поведение сотрудников в конкретных ситуациях.
+определяющие поведение сотрудников в конкретных ситуациях \autocite{shveikin}.
 
 В руководстве по компьютерной безопасности, разработанном национальным институтом стандартов и технологий
 США (National Institute of Standards and Technology — NIST), рекомендовано включать в описание
-политики безопасности следующие разделы:
+политики безопасности следующие разделы  \autocite{nurzhanov}:
 \begin{itemize}
 	\item \textbf{Предмет политики.}
         В разделе должны быть определены цели и причины разработки политики, область ее применения
@@ -393,14 +393,14 @@ Access List для пользователей, имеющих доступ к т
 систем организации. Возможна подготовка презентаций и проведение семинаров с разъяснением основных положений
 и практических технологий реализации политики безопасности. Новые сотрудники организации должны быть ознакомлены
 или обучены конкретным правилам и технологиям доступа к ресурсам ИС, реализованным в соответствии с принятой
-политикой безопасности. Целесообразно проводить контрольные проверки действий сотрудников с обсуждением результатов.
+политикой безопасности. Целесообразно проводить контрольные проверки действий сотрудников с обсуждением результатов \autocite{shveikin}.
 
 Эффективное проведение политики безопасности возможно только, если она согласована с существующими приказами
 и общими задачами организации. Основным способом координации политики безопасности с действующими нормами
 организации является ее согласование с заинтересованными подразделениями в ходе разработки.
 
 Комплект документов, представляющий основные решения организации по реализации политики безопасности,
-должен включать:
+должен включать \autocite{nurzhanov}:
 \begin{itemize}
     \item
         документацию, определяющую используемые подходы к оцениванию и управлению рисками для
