modified:   bibliography.bib - добавление источника для анализа транзакций 	modified:   part/security.tex - добавление источника для анализа рранзакций

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1061,3 +1061,17 @@
 	year={2020},
 	publisher={ООО {\guillemotleft}Олимп{\guillemotright}}
 }
+
+@article{oscerko,
+  title={Технологии баз данных и знаний: учеб. пособие с грифом Министерства образования РБ},
+  author={Оскерко, ВС and Пунчик, ЗВ},
+  journal={Минск: БГЭУ},
+  year={2015}
+}
+
+@inproceedings{koch,
+  title={ФИЗИЧЕСКОЕ ПРОЕКТИРОВАНИЕ БАЗЫ ДАННЫХ},
+  author={Кох Ю.А.},
+  url = {https://scienceforum.ru/2017/article/2017030333},
+  booktitle={ Материалы IX Международной студенческой научной конференции «Студенческий научный форум»}
+}
