--- a/part/security.tex
+++ b/part/security.tex
@@ -11,7 +11,7 @@
 обеспечению безопасности информации, связанной с деятельностью организации. Только человек, четко
 осознающий цели организации и условия ее функционирования, может определить, какую информацию
 необходимо защищать и насколько существенными могут стать потери от несанкционированного
-распространения, искажения или разрушения информации \autocite{shveikin}. После того как политика безопасности
+распространения, искажения или разрушения информации. После того как политика безопасности
 определена, должен решаться вопрос о технологии ее реализации в автоматизированном контуре.
 Для реализации сформулированных в терминах естественного языка правил и норм политики
 безопасности необходимо использовать (или разработать) некоторую формальную модель,
@@ -438,7 +438,7 @@ Access List для пользователей, имеющих доступ к т
 \subsubsection{Концептуальное проектирование}
 
 Цель этапа концептуального проектирования – создание концептуальной модели данных исходя из представлений
-пользователей о предметной области. Для ее достижения выполняется ряд последовательных процедур.
+пользователей о предметной области. Для ее достижения выполняется ряд последовательных процедур \autocite{oscerko}.
 \begin{enumerate}
 	\item \textbf{Определение сущностей и их документирование.}
 	Для идентификации сущностей определяются объекты, которые существуют независимо от других. Такие объекты
@@ -541,7 +541,7 @@ Access List для пользователей, имеющих доступ к т
 
 Цель этапа логического проектирования – преобразование концептуальной модели на основе выбранной модели данных
 в логическую модель, не зависимую от особенностей используемой в дальнейшем СУБД для физической реализации базы
-данных. Для ее достижения выполняются следующие процедуры:
+данных. Для ее достижения выполняются следующие процедуры \autocite{oscerko}:
 \begin{enumerate}
     \item \textbf{Выбор модели данных.}
         Чаще всего выбирается реляционная модель данных в связи с наглядностью табличного представления данных
@@ -915,7 +915,7 @@ Access List для пользователей, имеющих доступ к т
 Цель этапа физического проектирования – описание конкретной реализации базы данных, размещаемой во внешней
 памяти компьютера. Это описание структуры хранения данных и эффективных методов доступа к данным базы. При
 логическом проектировании отвечают на вопрос – что надо сделать, а при физическом – выбирается способ, как
-это сделать. Процедуры физического проектирования следующие:
+это сделать. Процедуры физического проектирования следующие \autocite{oscerko}:
 \begin{enumerate}
     \item \textbf{Проектирование таблиц базы данных средствами выбранной СУБД.}
         Осуществляется выбор реляционной СУБД, которая будет использоваться для создания базы данных,
@@ -934,7 +934,7 @@ Access List для пользователей, имеющих доступ к т
     \item \textbf{Проектирование физической организации базы данных.}
         На этом шаге выбирается наилучшая файловая организация для таблиц. 
         
-        Выполняется \textbf{проектирование транзакций}:
+        Выполняется \textbf{проектирование транзакций} \autocite{koch}:
         
         Цель проектирования транзакций заключается в определении и
         документировании высокоуровневых характеристик всех транзакций,
