modified:   bibliography.bib особенности проектирования OLAP & OLTP 	modified:   part/security.tex особенности проектирования OLAP & OLTP

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1075,3 +1075,16 @@
   url = {https://scienceforum.ru/2017/article/2017030333},
   booktitle={ Материалы IX Международной студенческой научной конференции «Студенческий научный форум»}
 }
+
+@online{oracle_OLTP,
+	title = {{Что такое OLTP?}},
+	url = {https://www.oracle.com/cis/database/what-is-oltp/},
+	urldate = {2024}
+}
+
+@article{OLAP_OLTP,
+	title={Сравнительный анализ OLAP и OLTP--систем},
+	author={Сёмина, АВ},
+	year={2022},
+	publisher={БНТУ}
+}
