--- a/part/security.tex
+++ b/part/security.tex
@@ -485,11 +485,11 @@ Access List для пользователей, имеющих доступ к т
 	На диаграмме сущность изображается прямоугольником, в
 	котором указывается ее имя. А связь ромбом. Так же важен тип связи(1:1, 1:M, M:N). Рассмотрим их подробнее:
 	\begin{itemize}
-		\item 1:1(один к одному): примером такой связи служит "МЕНЕДЖЕР управляет ФИЛИАЛом", так как МЕНЕДЖЕР управляет только одним ФИЛИАЛом, а ФИЛИАЛ имеет только одного МЕНЕДЖЕРа;
+		\item 1:1(один к одному): примером такой связи служит <<МЕНЕДЖЕР управляет ФИЛИАЛом>>, так как МЕНЕДЖЕР управляет только одним ФИЛИАЛом, а ФИЛИАЛ имеет только одного МЕНЕДЖЕРа;
 		
-		\item 1:M(один ко многим): примером такой связи служит "ФИЛИАЛ  обрабатывает СЧЕТ", так как СЧЕТ обрабатывается только одним ФИЛИАЛом, а ФИЛИАЛ может обрабатывать более одного СЧЕТа;
+		\item 1:M(один ко многим): примером такой связи служит <<ФИЛИАЛ  обрабатывает СЧЕТ>>, так как СЧЕТ обрабатывается только одним ФИЛИАЛом, а ФИЛИАЛ может обрабатывать более одного СЧЕТа;
 		
-		\item  M:N(многие ко многим): примером такой связи служит "КЛИЕНТ ИМЕЕТ СЧЕТ", так как СЧЕТ может быть совместным и им могут пользоваться сразу несколько КЛИЕНТов, а КЛИЕНТ может завести более одного СЧЕТа;
+		\item  M:N(многие ко многим): примером такой связи служит <<КЛИЕНТ ИМЕЕТ СЧЕТ>>, так как СЧЕТ может быть совместным и им могут пользоваться сразу несколько КЛИЕНТов, а КЛИЕНТ может завести более одного СЧЕТа;
 	\end{itemize}
 	\begin{figure}[H]
 		\centering
@@ -511,9 +511,9 @@ Access List для пользователей, имеющих доступ к т
 		\item может ли атрибут иметь NULL-значения;
 		
 		\item является ли атрибут составным, и если это так, то из каких простых атрибутов он состоит.
-		Например, атрибут "Ф.И.О. клиента" может состоять из простых атрибутов "Фамилия", "Имя",
-		"Отчество", а может быть простым, содержащим единые значения, как-то "Сидорский Евгений
-		Михайлович". Если пользователь не нуждается в доступе к отдельным элементам "Ф.И.О.",
+		Например, атрибут <<Ф.И.О. клиента>> может состоять из простых атрибутов <<Фамилия>>, <<Имя>>,
+		<<Отчество>>, а может быть простым, содержащим единые значения, как-то <<Сидорский Евгений
+		Михайлович>>. Если пользователь не нуждается в доступе к отдельным элементам <<Ф.И.О.>>,
 		то атрибут представляется как простой;
 		
 		\item является ли атрибут расчетным, и если это так, то как вычисляются его значения.
@@ -521,8 +521,8 @@ Access List для пользователей, имеющих доступ к т
 	
 	\item \textbf{Определение значений атрибутов и их документирование.}
 	Для каждого атрибута сущности, участвующей в ER-модели, определяется набор допустимых значений и ему
-	присваивается имя. Например, атрибут "Тип счета" может иметь только значения "депозитный", "текущий",
-	"до востребования", "карт-счет". Обновляются записи словаря данных, относящиеся к атрибутам, – в них
+	присваивается имя. Например, атрибут <<Тип счета>> может иметь только значения <<депозитный>>, <<текущий>>,
+	<<до востребования>>, <<карт-счет>>. Обновляются записи словаря данных, относящиеся к атрибутам, – в них
 	заносятся имена наборов значений атрибутов.
 	
 	\item \textbf{Определение первичных ключей для сущностей и их документирование.}
@@ -983,10 +983,6 @@ Access List для пользователей, имеющих доступ к т
         	\item ограничения, устанавливаемые на время выполнения транзакций.
         \end{itemize} 
         
-        СУБД, созданная для поддержки оперативной обработки транзакций,
-        называется OLTP-системой (Online Transaction Processing). Обычно OLTPсистемы проектируются с целью обеспечения максимально интенсивной
-        обработки транзакций.
-        
         На основании указанных показателей принимаются решения об оптимизации производительности базы данных путем определения индексов
         в таблицах, ускоряющих выборку данных из базы, или снижения требований к уровню нормализации таблиц.
         Проводится оценка дискового объема памяти, необходимого для размещения создаваемой базы данных.
@@ -995,7 +991,7 @@ Access List для пользователей, имеющих доступ к т
 		При этом стоит понимать, что индексы занимают место в БД. При вводе новых данных или удалении
 		данных СУБД приходится обновлять и таблицы, и индексы. Это может
 		замедлить выполнение операций модификации данных, особенно для таблиц
-		с большим числом строк, как в ХД. Таким образом, может появиться
+		с большим числом строк, как в хранилище данных. Таким образом, может появиться
 		проблема, суть которой состоит в возникновении конфликта между
 		скоростью обновления данных в таблице и скоростью ее считываний. При
 		разрешении этой проблемы следует придерживаться следующего
@@ -1005,7 +1001,6 @@ Access List для пользователей, имеющих доступ к т
 		обновления данных ухудшается, то можно рассмотреть вопрос об удалении
 		некоторых индексов.
         
-
     \item \textbf{Разработка стратегии защиты базы данных.}
         База данных представляет собой ценный корпоративный ресурс, и организации ее защиты уделяется большое
         внимание. Для этого проектировщики должны иметь полное и ясное представление обо всех средствах защиты,
@@ -1018,6 +1013,95 @@ Access List для пользователей, имеющих доступ к т
 \end{enumerate}
 
 Решения о внесении любых изменений в функционирующую базу данных должны быть обдуманными и всесторонне взвешенными.
+
+\subsubsection{Особенности проектирования OLAP и OLTP систем}
+
+СУБД, созданная для поддержки оперативной обработки транзакций,
+называется \textbf{OLTP-системой} (Online Transaction Processing). \textbf{OLAP} (online analytical processing) обычно подразумевает запрос этих транзакций в базе данных для аналитических целей. 
+
+В таблице ниже представлено сравнение систем OLTP и OLAP\autocite{oracle_OLTP}.
+
+\begin{table}[!ht]
+	\centering
+	\begin{tabular}{|m{4cm}|m{6cm}|m{6cm}|}
+		\hline
+		 ~ &\textbf{OLTP-системы} & \textbf{OLAP-системы} \\ 
+		\hline
+		Цель & Основная цель OLTP-систем — обработка текущих транзакций в реальном времени. Эти системы используются для оперативной обработки данных, таких как обработка заказов, банковские транзакции, управление запасами и т.д. & Основная цель OLAP-систем — анализ данных для поддержки принятия решений. Эти системы используются для выполнения сложных запросов и анализа больших объемов данных, таких как отчеты по продажам, финансовый анализ, маркетинговые исследования и т.д. \\ 
+		\hline
+		Структура данных & Данные в OLTP-системах обычно нормализованы, чтобы избежать избыточности и обеспечить целостность данных. Это означает, что данные разбиты на множество таблиц с минимальной избыточностью. & Данные в OLAP-системах обычно денормализованы и хранятся в виде многомерных структур (например, кубов данных). Это позволяет быстро выполнять сложные запросы и агрегации. \\ 
+		\hline
+		Объем данных & Обрабатывает относительно небольшие объемы данных за одну транзакцию, но может обрабатывать большое количество транзакций в единицу времени. & Обрабатывает большие объемы данных, которые могут включать исторические данные за длительные периоды времени.\\ 
+		\hline
+		Типы запросов &  Запросы обычно простые и часто повторяющиеся, такие как вставка, обновление, удаление и простые выборки данных. &Запросы обычно сложные и уникальные, включающие агрегации, фильтрацию, сортировку и другие операции анализа данных. \\ 
+		\hline
+		Хранение данных &  Данные хранятся в реляционных базах данных, таких как MySQL, PostgreSQL, Oracle и другие. & Данные могут храниться в специализированных хранилищах данных (data warehouses) или в многомерных базах данных (OLAP-кубы).\\ 
+		\hline
+	\end{tabular}
+\end{table}
+
+Эти различия подчеркивают, что OLTP и OLAP-системы предназначены для разных задач и требуют разных подходов к проектированию и оптимизации.
+
+Проектирование информационных систем для OLTP и OLAP требует учета различных профилей нагрузки, чтобы обеспечить оптимальную производительность и надежность. Рассмотрим различные профили нагрузки и их влияние на проектирование OLTP и OLAP систем \autocite{OLAP_OLTP}.
+
+
+\textbf{Профили нагрузки для OLTP систем}:
+\begin{itemize}
+	\item Высокая частота транзакций:
+
+	Описание: Большое количество транзакций в секунду (TPS).
+
+	Проектирование: Использование высокопроизводительных баз данных, оптимизация индексов, кэширование данных, горизонтальное масштабирование (sharding).
+
+	\item Низкая латентность:
+
+	Описание: Требование минимального времени отклика на транзакции.
+	
+	Проектирование: Оптимизация запросов, использование внутренней памяти для хранения часто используемых данных, минимизация блокировок.
+	
+	\item Высокая доступность:
+
+	Описание: Система должна быть доступна 24/7.
+	
+	Проектирование: Репликация данных, кластеризация, автоматическое восстановление после сбоев, резервное копирование.
+	
+	\item Целостность данных:
+
+	Описание: Обеспечение точности и согласованности данных.
+	
+	Проектирование: Использование транзакций с ACID-свойствами, валидация данных, аудит и логирование изменений.
+\end{itemize}
+
+\textbf{Профили нагрузки для OLAP систем}:
+
+\begin{itemize}
+	
+	\item Сложные аналитические запросы:
+
+	Описание: Выполнение сложных запросов с агрегацией, фильтрацией и сортировкой.
+	
+	Проектирование: Оптимизация запросов, использование многомерных структур данных (OLAP-кубы), предварительная агрегация данных.
+	
+	\item Высокий объем данных:
+
+	Описание: Обработка больших объемов данных.
+	
+	Проектирование: Использование хранилищ данных (data warehouses), горизонтальное масштабирование, распределенные вычисления.
+	
+	\item Исторические данные:
+
+	Описание: Хранение и анализ данных за длительные периоды времени.
+	
+	Проектирование: Эффективное управление версиями данных, архивирование, использование временных баз данных.
+	
+	\item Высокая скорость отклика на запросы:
+
+	Описание: Требование быстрого выполнения аналитических запросов.
+	
+	Проектирование: Оптимизация индексов, кэширование результатов запросов, использование материализованных представлений.
+\end{itemize}
+
+Проектирование информационных систем для OLTP и OLAP требует учета различных профилей нагрузки, чтобы обеспечить оптимальную производительность и надежность. OLTP-системы оптимизированы для высокой частоты транзакций и низкой латентности, тогда как OLAP-системы оптимизированы для выполнения сложных аналитических запросов и обработки больших объемов данных. Понимание этих различий позволяет разработчикам и архитекторам создавать системы, которые эффективно справляются с соответствующими нагрузками.
 
 \subsection{Формальные верификации и спецификации}
 Информация взята из \autocite{Glukharev}
